--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.feature.development": "1.0.2",
     "com.unity.inputsystem": "1.8.2",
     "com.unity.mathematics": "1.3.2",
+    "com.unity.probuilder": "6.0.4",
     "com.unity.timeline": "1.8.6",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.4",
